manifests/base/namespace.yaml
# manifests/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default-ns
